# baykar_uav

./: .dockerignore  Dockerfile  README.md  docker-compose.yml
av_builder/: .env  .pylintrc  data.json  manage.py  pyproject.toml  startup.sh
av_builder/aircrafts/: admin.py  models.py
av_builder/aircrafts/migrations/: 0001_initial.py
av_builder/api/: serializers.py  test_api.py  urls.py  views.py
av_builder/av_builder/: asgi.py  settings.py  urls.py  wsgi.py
av_builder/static/css/: custom.css
av_builder/templates/api/: base.html  index.html  login.html
