[tool.poetry]
name = "av-builder"
version = "0.1.0"
description = ""
authors = ["Tolga Bilbey <bilbeyt@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.6"
django = "^5.1.2"
psycopg2 = "^2.9.10"
python-dotenv = "^1.0.1"
djangorestframework = "^3.15.2"
django-extensions = "^3.2.3"
django-bootstrap5 = "^24.3"
djangorestframework-datatables = "^0.7.2"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"
flake8 = "^7.1.1"
pytest = "^8.3.3"
pylint = "^3.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 99
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | \.mypy_cache
  | dist
)/
'''

[tool.isort]
line_length = 99
profile = "black"
multi_line_output = 3
ignore_whitespace = true
